setup json and newtonsoft

--- a/Lab08-LINQ-Manhattan/Lab08-LINQ-Manhattan/Lab08-LINQ-Manhattan.csproj
+++ b/Lab08-LINQ-Manhattan/Lab08-LINQ-Manhattan/Lab08-LINQ-Manhattan.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Lab08_LINQ_Manhattan</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
